--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+<!--                     <li>
                         <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -220,8 +220,8 @@
                     </div>
                 </div>
                 <!-- /.row -->
-
-                <div class="row">
+<!-- Pour avoir le tableau de bord, en V1 pas utile. -->
+<!--                 <div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
@@ -310,7 +310,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- /.row -->
 
                 <div class="row">
@@ -341,7 +341,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+<!--                     <div class="col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Tasks Panel</h3>
@@ -385,7 +385,7 @@
                                     <a href="#">View All Activity <i class="fa fa-arrow-circle-right"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-lg-4">
                         <div class="panel panel-default">
