--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
-                    <li>
+                    <!-- Affichage des graphiques, mais on débute seulement avec Dashboard et table -->
+<!--                     <li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Forms</a>
                     </li>
                     <li>
@@ -180,7 +181,7 @@
                                 <a href="#">Dropdown Item</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
 <!--                     <li>
                         <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
                     </li> -->
@@ -202,23 +203,23 @@
                         <h1 class="page-header">
                             Dashboard <small>Statistics Overview</small>
                         </h1>
-                        <ol class="breadcrumb">
+                        <!-- <ol class="breadcrumb">
                             <li class="active">
                                 <i class="fa fa-dashboard"></i> Dashboard
                             </li>
-                        </ol>
+                        </ol> -->
                     </div>
                 </div>
                 <!-- /.row -->
 
-                <div class="row">
+               <!--  <div class="row">
                     <div class="col-lg-12">
                         <div class="alert alert-info alert-dismissable">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                             <i class="fa fa-info-circle"></i>  <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- /.row -->
 <!-- Pour avoir le tableau de bord, en V1 pas utile. -->
 <!--                 <div class="row">
@@ -328,7 +329,7 @@
                 <!-- /.row -->
 
                 <div class="row">
-                    <div class="col-lg-4">
+<!--                     <div class="col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Donut Chart</h3>
@@ -340,7 +341,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 <!--                     <div class="col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
